bin_PROGRAMS=destor
destor_SOURCES=
destor_LDADD=src/libdestor.a src/index/libindex.a src/storage/libstorage.a src/utils/libutils.a src/recipe/librecipe.a src/chunking/libchunk.a src/fsl/libfsl.a
SUBDIRS=src src/index src/recipe src/storage src/utils src/chunking src/fsl
LIBS=-lpthread -lcrypto -lglib 
